--- a/www/css/style.css
+++ b/www/css/style.css
@@ -38,7 +38,7 @@ ion-popover-view.fit ion-content {
 }
 
 .navbar-button {
-    min-width: 30px !important;
+    min-width: 5vh !important;
     text-align: center !important;
     padding-left: 0px !important;
     padding-right: 0px !important;
@@ -65,8 +65,8 @@ ion-popover-view.fit ion-content {
 .button.icon.reader-big-button-icon:before, 
 .button.icon-left.reader-big-button-icon:before, 
 .button.icon-right.reader-big-button-icon:before {
-    font-size: 50px !important;
-    line-height: 50px !important;
+    font-size: 5vh !important;
+    line-height: 5vh !important;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -94,4 +94,12 @@ ion-popover-view.fit ion-content {
 .bookmark-pushed {
     color: #86F053 !important;
     /* color: #1565C0 !important; */
+}
+
+
+@media only screen and (max-width: 950px) {
+
+    .navbar-button {
+	min-width: 5vh !important;
+    }
 }
